Moved from constructor injection. Channel and game pages prototypes.
