# src/app/services/api/channel.service.ts
@@ -1,0 +1,15 @@
+import { inject, Injectable } from "@angular/core";
+import { ApiClientService } from "./api-client.service";
+
+@Injectable({
+	providedIn: "root",
+})
+export class ChannelService {
+	private apiClient = inject(ApiClientService);
+
+	async get(id: string) {
+		return await this.apiClient.client.GET("/api/Channel/Get/{id}", {
+			params: { path: { id: id } },
+		});
+	}
+}
